# contexto-solver-agent

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml  view_results.ipynb
.github/workflows/: daily-contexto.yml
contexto_solver/: api.py  config.py  embedding.py  pipeline.py
